tests/paczka1/fuzzy1/56215097.err
Error in line 2: zsaqNvc A680 2,9
Error in line 7: zZJ2 A0 47,7
Error in line 8: zZJ2 A0 74,4
Error in line 9: zZJ2 A0 73,4
Error in line 10: zZJ2 A0 347,2
Error in line 13: ?A0
Error in line 14: A184 A|79 1,0
Error in line 5: bPHE3b A184 16,6
Error in line 16: zsaqNvc A0 26,4
Error in line 20: zZJ2 A0 82,2
Error in line 28: ?A0
Error in line 35: MmW A0 69,7
Error in line 17: zsaqNvc A680 22,5
Error in line 39: bPHE3b A0 22,7
Error in line 40: xJ6e A0 50,8
